--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Botany / Phylogenetics / Bioinformatics
 logo: site-logo.svg
 search: true
-url: http://eaton-lab.github.io ##http://localhost:4000
+url: https://eaton-lab.github.io   ##http://localhost:4000
 
 # Jekyll configuration
 
