changed nav to include news/blog/links sections

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # Site navigation links
-- title: News/Posts
+- title: News
   url: /articles
+
+- title: Blog
+  url: /posts
 
 - title: Research
   url: /research/
@@ -10,6 +13,11 @@
 
 - title: Publications
   url: /publications/
+
+- title: Links
+  url: /links/
+
+
 
 #- title: Search
 #  url: /search/
