updated github link

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
   disqus-shortname:
   twitter: dereneaton
   facebook: #username
-  github: dereneaton
+  github: eaton-lab
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
