updated bio photos

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ Deren:
   name: Deren Eaton
   email: de2356@columbia.edu
   bio: PI
-  avatar: Deren-photo4.png
+  avatar: Deren-photo5.jpg
   twitter: dereneaton
 
 Sandra:
@@ -15,7 +15,7 @@ Sandra:
 
 Patrick:
   name: Patrick McKenzie
-  email: p.mckenzie@columbia.edu
+  email: pfm2119@columbia.edu
   bio: Graduate student
   avatar: Patrick-photo2.png
   twitter: rhymeswithsackit
