changed posts and blog tabs to just Posts

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # Site navigation links
-- title: News
+- title: Posts          # News
   url: /articles
 
-- title: Blog
-  url: /posts
+#- title: Blog
+#  url: /posts
 
 - title: Research
   url: /research/
